' Generated by UML Generator
' Encoded: tLPDRzD04BtxLup2nL7S2AuMZPecKOa8f4g04vUjFGqhrhjXTnmGeV-TiHqxjkEAje93kKIR-NZxtjlPbIyS2KjfeZptLUgji2A1I0ddnaHMtgI4yyZejVo9yDBx8cE4IDf8eUVbLJ1M92P6apLAeOMz1t2sPqoIqHquj5AeJsYTDFhZV1g2Cde3v_1gqQXRBAz2M9ZDXX7E3ulX1gbO-Rtc9hr-etazknwlnjFbAeGrKyxnUvzrBoiwuvz1izlFkb_4vWh9j_WjHKSXl27Qhj7k5DAgY0LWqMsDTjZA5i5-23iZumBgshY_WNLNUZf54apL_NDVJpSglCrjEqq-0-lU2QcVQbkkkWdm78RbakdY3rPKg4rPPNaJilzRBlfkR5oFyOtM617tX32freyRdSlei6rzP2ekVfr606qIMSk0qQhoVel885B6eNzqBgkU9Lk58ZRExnR0rMnJgcYDT6YP8Zzf91BKzE0smU_5-nHtfjpldhu0y50GGbaQG2pjn5YBnh5_qj7hGl4e09qc7r3XhT7jN5DcUV7-93S0oOPAJGq1F1WSGdih8eIw_6oG9CVs7TPaP3ApSrBrnAZ-AfrWpPdX4_2E_4g93MxI7JKktsOmDyPmcMwDGMEJCZWgJx0wlAv3maH8TN90z9ZJyMKygv2BGpYaZfQrv5LsFVoQTI3Kxjl_uDHzOpKS_XfrpPpNPMfUt4fu5wXZ_h3v3G
' URL: http://www.plantuml.com/plantuml/uml/tLPDRzD04BtxLup2nL7S2AuMZPecKOa8f4g04vUjFGqhrhjXTnmGeV-TiHqxjkEAje93kKIR-NZxtjlPbIyS2KjfeZptLUgji2A1I0ddnaHMtgI4yyZejVo9yDBx8cE4IDf8eUVbLJ1M92P6apLAeOMz1t2sPqoIqHquj5AeJsYTDFhZV1g2Cde3v_1gqQXRBAz2M9ZDXX7E3ulX1gbO-Rtc9hr-etazknwlnjFbAeGrKyxnUvzrBoiwuvz1izlFkb_4vWh9j_WjHKSXl27Qhj7k5DAgY0LWqMsDTjZA5i5-23iZumBgshY_WNLNUZf54apL_NDVJpSglCrjEqq-0-lU2QcVQbkkkWdm78RbakdY3rPKg4rPPNaJilzRBlfkR5oFyOtM617tX32freyRdSlei6rzP2ekVfr606qIMSk0qQhoVel885B6eNzqBgkU9Lk58ZRExnR0rMnJgcYDT6YP8Zzf91BKzE0smU_5-nHtfjpldhu0y50GGbaQG2pjn5YBnh5_qj7hGl4e09qc7r3XhT7jN5DcUV7-93S0oOPAJGq1F1WSGdih8eIw_6oG9CVs7TPaP3ApSrBrnAZ-AfrWpPdX4_2E_4g93MxI7JKktsOmDyPmcMwDGMEJCZWgJx0wlAv3maH8TN90z9ZJyMKygv2BGpYaZfQrv5LsFVoQTI3Kxjl_uDHzOpKS_XfrpPpNPMfUt4fu5wXZ_h3v3G
' Generated on: 2026-06-09T09:53:20.329692

@startuml
skinparam classAttributeIconSize 0
hide circle

class AltaController {
  -{static} serialVersionUID: long = 1L
  -{static} LOG: Logger = Logger.getLogger("AltaController")
  -{static} SEPARADOR: String = "\n"
  --
  +AltaController()
  #doGet(request: HttpServletRequest, response: HttpServletResponse): void
  #doPost(request: HttpServletRequest, response: HttpServletResponse): void
}

class DetallesController {
  -{static} serialVersionUID: long = 1L
  -{static} LOG: Logger = Logger.getLogger("DetallesController")
  --
  +DetallesController()
  #doGet(request: HttpServletRequest, response: HttpServletResponse): void
  #doPost(request: HttpServletRequest, response: HttpServletResponse): void
}

class MainController {
  -{static} serialVersionUID: long = 1L
  --
  +MainController()
  #doGet(request: HttpServletRequest, response: HttpServletResponse): void
  #doPost(request: HttpServletRequest, response: HttpServletResponse): void
}

class DBConexion {
  -user: String
  -password: String
  -connection: Connection
  -{static} LOG: Logger = Logger.getLogger("DBconexion")
  --
  +DBConexion(user: String, password: String)
  +getConexion(): Connection
  +close(): void
  +getEmpleados(connection: Connection): ResultSet
  +getDepartamentos(connection: Connection): ResultSet
  +altaNuevoEmpleado(connection: Connection, empleado: Empleado, dirCorreos: List<String>, numTelefonos: List<String>): void
  +getDetallesEmpleados(connection: Connection, id: int): ResultSet
}

interface DepartamentoService {
  +getDepartamentoList(): List<Departamento>
}

class DepartamentoServiceImpl {
  +getDepartamentoList(): List<Departamento>
}

interface EmpleadoService {
  +isConnectionOK(): boolean
  +getEmpleadoList(): List<Empleado>
  +altaEmpleado(empleado: Empleado, emails: List<String>, telefonos: List<String>): void
  +getDetalles(idEmpleado: int): Detalle
}

class EmpleadoServiceImpl {
  -{static} LOG: Logger = Logger.getLogger("EmpleadoServiceImpl")
  --
  +isConnectionOK(): boolean
  +getEmpleadoList(): List<Empleado>
  +altaEmpleado(empleado: Empleado, emails: List<String>, telefonos: List<String>): void
  +getDetalles(idEmpleado: int): Detalle
}

DepartamentoServiceImpl ..|> DepartamentoService
EmpleadoServiceImpl ..|> EmpleadoService
@enduml